<resources>
    <string name="app_name">AgroMart</string>
    <string name="sub_title">Easy to buy easy to sell</string>
    <string name="sign_up">sign up</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="alreadyHaveAnAccount">Already Have An Account ?</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_button">Sign up</string>
    <string name="login">Login</string>
    <string name="forgot_password">FORGET PASSWORD</string>
    <string name="forgot_password_detail">PROVIDE YOUR ACCOUNT\'s EMAIL FOR WHICH YOU WANT TO RESET YOUR PASSWORD!</string>
    <string name="enter_email">Email</string>
    <string name="nxt_btn">NEXT</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="new_user">New User?Sign Up</string>
    <string name="otp_code_text">Co\nde</string>
    <string name="otp_verification_text">Verification</string>
    <string name="otp_description_text">Enter one time password sent on\n+917006893820</string>
    <string name="verify_code">VERIFY CODE</string>
    <string name="new_credentials">New Credentials</string>
    <string name="new_credential_details">YOUR IDENTITY HAS BEEN VERIFIED!\nSET YOUR NEW PASSWORD</string>
    <string name="new_passwrd">New Password</string>
    <string name="confirm_passwrd">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="password_updated">PASSWORD UPDATED</string>
    <string name="password_updated_success_msg">YOUR PASSWORD HAS BEEN UPDATED</string>
    <string name="search_for">Search For Apple Varieties</string>
    <string name="category">Categories</string>
    <string name="recommendations">Fresh Recommendations</string>
    <string name="delicious">Delicious</string>
    <string name="pear">Pear</string>
    <string name="kullu">Kullu</string>
    <string name="mahraji">Mahraji</string>
    <string name="golden">Golden</string>
    <string name="treal">Treal</string>
    <string name="american">American</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="grade_a">Gift</string>
    <string name="grade_b">SF</string>
    <string name="grade_c">Role</string>
    <string name="grade_d">Gift and SF</string>
    <string name="grade_e">Mixed</string>
    <string name="packing_1">Wooden Box</string>
    <string name="Packing_2">Cardboard Box</string>
    <string name="Packing_3">Open</string>
    <string name="add_post">Add Post</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload">UPLOAD IMAGES</string>
    <string name="post_details">Post Details</string>
    <string name="select_grade">Select Grade</string>
    <string name="or">OR</string>
    <string name="quantity">Quantity</string>
    <string name="post_description">Post Description</string>
    <string name="description_content">Here you can add the detailed description of the post.</string>
    <string name="write_commits">Write your comment here</string>
    <string name="commits">Commits</string>
    <string name="submit">Submit</string>
    <string name="select_variety">Select Variety</string>
    <string name="select_packing_type">Select Packing Type</string>
    <string name="set_address">Set Address</string>
    <string name="gallery">Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="about_agromart">About AgroMart</string>
    <string name="about_content">Agromart is a revolutionary platform connecting fruit growers directly with traders, eliminating intermediaries to empower growers and maximize their earnings. By bridging the gap between producers and buyers, we aim to create a transparent, efficient, and fair marketplace for agricultural trade.</string>
    <string name="our_mission">Our Mission</string>
    <string name="mission_content">To empower fruit growers by providing them with direct access to traders, ensuring fair pricing and fostering sustainable growth in the agricultural sector.</string>
    <string name="our_vision">Our Vision</string>
    <string name="vision_content">To empower fruit growers by providing them with direct access to traders, ensuring fair pricing and fostering sustainable growth in the agricultural sector.</string>
    <string name="why_agromart">Why AgroMart</string>
    <string name="direct_connection">1. Direct Connection :</string>
    <string name="direct_connection_content">No middlemen, meaning better earnings for growers and fair prices for traders.</string>
    <string name="transparency">2. Transparency</string>
    <string name="transparency_content">Clear communication and secure transactions.</string>
    <string name="efficiency">3. Efficiency</string>
    <string name="efficiency_content">A user-friendly platform to save time and effort.</string>
    <string name="support_for_growth">4. Support for Growth: </string>
    <string name="support_content">We prioritize the success of growers and traders alike.</string>
    <string name="our_story">Our Story</string>
    <string name="our_story_content">Agromart was born out of a desire to revolutionize the way agricultural trade works. We understand the struggles growers face in getting a fair price for their produce and the challenges traders face in sourcing high-quality fruits efficiently. With Agromart, we strive to solve these problems and pave the way for a better future in agriculture.</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_description">Do you have questions or feedback? Feel free to reach out! We’re here to help.</string>
    <string name="phone">Phone</string>
    <string name="our_phone">+91 7006378179</string>
    <string name="our_email">barshoinfotech@gmail.com</string>
    <string name="wish_list">Wish List</string>
    <string name="save">SAVE</string>
    <string name="Profile_name">Imran Bhat</string>
    <string name="Profile_emailID">Bhatimran9797@gmail.com</string>
    <string name="my_posts">My Posts</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language">Language</string>
    <string name="profile_password">Password:</string>
    <string name="change">Change</string>
    <string name="profile_phn_no">Phone no :</string>
    <string name="number">7006893820</string>
    <string name="District">District:</string>
    <string name="profile_address">Baramulla</string>
    <string name="Village">Village:</string>
    <string name="profile_village">Khanpora</string>
    <string name="state">State:</string>
    <string name="state_name">Jammu and Kashmir</string>
    <string name="todo">TODO</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="product_details">Product Details</string>
    <string name="variety">Variety:</string>
    <string name="grade">Grade</string>
    <string name="gift_5">Gift/5</string>
    <string name="packing_type">Packing Type</string>
    <string name="packed">Packed</string>
    <string name="_250_boxes">250 Boxes</string>
    <string name="owner_details">Owner Details</string>
    <string name="name">Name</string>
    <string name="address">address</string>
    <string name="phone_number">Phone Number</string>
    <string name="open">open menu</string>
    <string name="close">close menu</string>
    <string-array name="array_indian_states">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="array_andhra_pradesh_districts">
        
        <item>Anantapur</item>
        <item>Chittoor</item>
        <item>East Godavari</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Krishna</item>
        <item>Kurnool</item>
        <item>Nellore</item>
        <item>Prakasam</item>
        <item>Srikakulam</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>West Godavari</item>
    </string-array>
    <string-array name="array_arunachal_pradesh_districts">
        
        <item>Anjaw</item>
        <item>Siang</item>
        <item>Changlang</item>
        <item>Dibang Valley</item>
        <item>East Kameng</item>
        <item>East Siang</item>
        <item>Kamle</item>
        <item>Kra Daadi</item>
        <item>Kurung Kumey</item>
        <item>Lepa Rada</item>
        <item>Lohit</item>
        <item>Longding</item>
        <item>Lower Dibang Valley</item>
        <item>Lower Siang</item>
        <item>Lower Subansiri</item>
        <item>Namsai</item>
        <item>Pakke Kessang</item>
        <item>Papum Pare</item>
        <item>Shi Yomi</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
        <item>Upper Subansiri</item>
        <item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="array_assam_districts">
        
        <item>Bajali</item>
        <item>Baksa</item>
        <item>Barpeta</item>
        <item>Biswanath</item>
        <item>Bongaigaon</item>
        <item>Cachar</item>
        <item>Charaideo</item>
        <item>Chirang</item>
        <item>Darrang</item>
        <item>Dhemaji</item>
        <item>Dhubri</item>
        <item>Dibrugarh</item>
        <item>Dima Hasao</item>
        <item>Goalpara</item>
        <item>Golaghat</item>
        <item>Hailakandi</item>
        <item>Hojai</item>
        <item>Jorhat</item>
        <item>Kamrup</item>
        <item>Kamrup Metropolitan</item>
        <item>Karbi Anglong</item>
        <item>Karimganj</item>
        <item>Kokrajhar</item>
        <item>Lakhimpur</item>
        <item>Majuli</item>
        <item>Morigaon</item>
        <item>Nagaon</item>
        <item>Nalbari</item>
        <item>Sivasagar</item>
        <item>Sonitpur</item>
        <item>South Salmara-Mankachar</item>
        <item>Tinsukia</item>
        <item>Udalguri</item>
        <item>West Karbi Anglong</item>
    </string-array>
</resources>